# softmata-core

./: Cargo.toml  INTEGRATION.md
src/: conventions.rs  lib.rs  prelude.rs  time.rs
src/geometry/: accel.rs  covariance.rs  mod.rs  pose2d.rs  pose3d.rs  quaternion.rs  transform.rs  twist.rs  vector.rs  wrench.rs
src/messages/: descriptors.rs  diagnostics.rs  mod.rs  sensor.rs
src/sensor/: mod.rs  point.rs  traits.rs
tests/: cross_project.rs
